--- a/package.json
+++ b/package.json
@@ -4,12 +4,14 @@
   "description": "",
   "main": "src/app.js",
   "scripts": {
-    "start": "node src/pp.js"
+    "start": "node src/pp.js",
+    "dev": "nodemon src/app.js"
   },
   "author": "",
   "license": "ISC",
   "dependencies": {
     "body-parser": "^1.19.0",
+    "dotenv": "^8.1.0",
     "express": "^4.17.1",
     "hbs": "^4.0.4",
     "mongoose": "^5.6.11",
