--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "src/app.js",
   "scripts": {
     "start": "node src/pp.js",
-    "dev": "nodemon src/app.js"
+    "dev": "nodemon src/app.js -e js,hbs"
   },
   "author": "",
   "license": "ISC",
@@ -15,6 +15,9 @@
     "express": "^4.17.1",
     "hbs": "^4.0.4",
     "mongoose": "^5.6.11",
+    "passport": "^0.4.0",
+    "passport-google-oauth20": "^2.0.0",
+    "passport-local-mongoose": "^5.0.1",
     "request": "^2.88.0"
   }
 }
