--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "src/app.js",
   "scripts": {
-    "start": "node src/pp.js",
+    "start": "node src/app.js",
     "dev": "nodemon src/app.js -e js,hbs"
   },
   "author": "",
@@ -19,5 +19,8 @@
     "passport-google-oauth20": "^2.0.0",
     "passport-local-mongoose": "^5.0.1",
     "request": "^2.88.0"
+  },
+  "devDependencies": {
+    "nodemon": "^1.18.9"
   }
 }
