--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "src/app.js",
   "scripts": {
     "start": "node src/app.js",
-    "dev": "nodemon src/app.js -e js,hbs"
+    "dev": "env-cmd ./config/dev.env nodemon src/app.js -e js,hbs"
   },
   "author": "",
   "license": "ISC",
@@ -21,6 +21,7 @@
     "request": "^2.88.0"
   },
   "devDependencies": {
+    "env-cmd": "^8.0.2",
     "nodemon": "^1.18.9"
   }
 }
