--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "express-session": "^1.17.0",
     "hbs": "^4.0.4",
     "jsonwebtoken": "^8.5.1",
+    "moji-translate": "^1.0.8",
     "mongoose": "^5.6.11",
     "passport": "^0.4.0",
     "passport-google-oauth20": "^2.0.0",
