--- a/package.json
+++ b/package.json
@@ -10,16 +10,20 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "aws-sdk": "^2.562.0",
     "bcrypt": "^3.0.6",
     "body-parser": "^1.19.0",
     "cookie-parser": "^1.4.4",
     "dotenv": "^8.1.0",
     "express": "^4.17.1",
     "express-session": "^1.17.0",
+    "fs": "0.0.1-security",
     "hbs": "^4.0.4",
     "jsonwebtoken": "^8.5.1",
     "moji-translate": "^1.0.8",
     "mongoose": "^5.6.11",
+    "multer": "^1.4.2",
+    "multer-s3": "^2.9.0",
     "passport": "^0.4.0",
     "passport-google-oauth20": "^2.0.0",
     "passport-local-mongoose": "^5.0.1",
