--- a/package.json
+++ b/package.json
@@ -4,8 +4,12 @@
   "description": "",
   "main": "src/app.js",
   "scripts": {
-    "start": "node src/app.js",
-    "dev": "env-cmd ./config/dev.env nodemon src/app.js -e js,hbs"
+    "start": "node src/index.js",
+    "dev": "env-cmd ./config/dev.env nodemon src/index.js -e js,hbs",
+    "test": "env-cmd ./config/test.env jest --watch --runInBand"
+  },
+  "jest": {
+    "testEnvironment": "node"
   },
   "author": "",
   "license": "ISC",
@@ -31,6 +35,8 @@
   },
   "devDependencies": {
     "env-cmd": "^8.0.2",
-    "nodemon": "^1.18.9"
+    "jest": "^24.9.0",
+    "nodemon": "^1.18.9",
+    "supertest": "^4.0.2"
   }
 }
