--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "aws-sdk": "^2.562.0",
     "bcrypt": "^3.0.6",
     "body-parser": "^1.19.0",
+    "config": "^3.3.1",
     "cookie-parser": "^1.4.4",
     "dotenv": "^8.1.0",
     "express": "^4.17.1",
